--- a/index.html
+++ b/index.html
@@ -1,27 +1,85 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Allen Chen Portfolio</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <title>Allen Chen | Data Analytics & IT Portfolio</title>
   <style>
-    body { font-family: Arial, sans-serif; max-width: 800px; margin: auto; padding: 20px; }
-    h1 { color: #2c3e50; }
-    a { color: #3498db; text-decoration: none; }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f5f7fa;
+      color: #333;
+      text-align: center;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 50px auto;
+      padding: 20px;
+      background: white;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+      border-radius: 10px;
+      opacity: 0;
+      transform: translateY(20px);
+      transition: all 1s ease;
+    }
+
+    h1 {
+      color: #2c3e50;
+    }
+
+    h2 {
+      color: #34495e;
+      margin-top: 40px;
+    }
+
+    a {
+      color: #3498db;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+
+    a:hover {
+      color: #2ecc71;
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    li {
+      margin: 10px 0;
+    }
   </style>
 </head>
 <body>
-  <h1>Hi, I'm Allen Chen</h1>
-  <p>Welcome to my portfolio site! I am a recent IT graduate passionate about data analytics and technology.</p>
-  <h2>Projects</h2>
-  <ul>
-    <li>ASL-to-Speech Interpreter App (Python, MediaPipe)</li>
-    <li>Multimodal Biometric Authentication Project (Python, OpenCV, scikit-learn)</li>
-  </ul>
-  <h2>About Me</h2>
-  <p>Background in data analysis, scripting, and customer service. Interested in transforming data into insights to drive improvement.</p>
-  <h2>Contact</h2>
-  <p>Email: chenallen2001@gmail.com</p>
-  <p><a href="https://linkedin.com/in/allenmotions" target="_blank">LinkedIn</a></p>
+
+  <div class="container" id="main-container">
+    <h1>Hi, I'm Allen Chen 👋</h1>
+    <p>Welcome to my portfolio! I’m a recent IT graduate passionate about data analytics, AI, and technology.</p>
+
+    <h2>Projects 🚀</h2>
+    <ul>
+      <li>ASL-to-Speech Interpreter App (Python, MediaPipe)</li>
+      <li>Multimodal Biometric Authentication Project (Python, OpenCV, scikit-learn)</li>
+    </ul>
+
+    <h2>About Me</h2>
+    <p>Background in data analysis, scripting, and customer service. I love transforming data into insights to drive improvement and innovation.</p>
+
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:chenallen2001@gmail.com">chenallen2001@gmail.com</a></p>
+    <p><a href="https://www.linkedin.com/" target="_blank">LinkedIn</a></p>
+  </div>
+
+  <script>
+    // Simple fade-in animation on load
+    window.onload = () => {
+      const container = document.getElementById('main-container');
+      container.style.opacity = 1;
+      container.style.transform = 'translateY(0)';
+    };
+  </script>
 </body>
 </html>
