--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Allen Chen Portfolio</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
-    body { font-family: Arial, sans-serif; max-width: 800px; margin: auto; padding: 20px; }
-    h1 { color: #2c3e50; }
-    a { color: #3498db; text-decoration: none; }
-  </style>
+  <title>Allen Chen | Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hi, I'm Allen Chen</h1>
-  <p>Welcome to my portfolio site! I am a recent IT graduate passionate about data analytics and technology.</p>
-  <h2>Projects</h2>
-  <ul>
-    <li>ASL-to-Speech Interpreter App (Python, MediaPipe)</li>
-    <li>Multimodal Biometric Authentication Project (Python, OpenCV, scikit-learn)</li>
-  </ul>
-  <h2>About Me</h2>
-  <p>Background in data analysis, scripting, and customer service. Interested in transforming data into insights to drive improvement.</p>
-  <h2>Contact</h2>
-  <p>Email: chenallen2001@gmail.com</p>
-  <p><a href="https://linkedin.com/in/allenmotions" target="_blank">LinkedIn</a></p>
+  <div class="sidebar">
+    <h1>Allen Chen</h1>
+    <img src="IMG_3139.jpg" alt="Profile Photo" class="profile-photo">
+    <p>Recent IT graduate with a strong background in data analysis, scripting, and customer service. Passionate about transforming data into actionable insights to drive improvement and innovation.</p>
+    <p>Email: <a href="mailto:chenallen2001@gmail.com">chenallen2001@gmail.com</a></p>
+    <p><a href="https://www.linkedin.com/" target="_blank">View my LinkedIn Profile</a></p>
+    <p><a href="https://github.com/allixar" target="_blank">View my GitHub Profile</a></p>
+  </div>
+
+  <div class="main-content">
+    <h2>Portfolio</h2>
+
+    <h3>Data & AI Projects</h3>
+    <div class="project">
+      <h4>ASL-to-Speech Interpreter App</h4>
+      <p>Developed using Python and MediaPipe. Converts American Sign Language gestures to audible speech, improving accessibility for the deaf and hard of hearing community.</p>
+    </div>
+
+    <div class="project">
+      <h4>Multimodal Biometric Authentication Project</h4>
+      <p>Fusion of face and palmprint biometrics using Python, OpenCV, and scikit-learn to enhance authentication security and accuracy.</p>
+    </div>
+
+    <!-- Add more projects here as needed -->
+  </div>
 </body>
 </html>
