--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="main-content">
     <h2>Portfolio</h2>
 
-    <h3>Data & AI Projects</h3>
+    <h3>Projects</h3>
     <div class="project">
       <h4>ASL-to-Speech Interpreter App</h4>
       <p>Developed using Python and MediaPipe. Converts American Sign Language gestures to audible speech, improving accessibility for the deaf and hard of hearing community.</p>
@@ -28,6 +28,17 @@
       <h4>Multimodal Biometric Authentication Project</h4>
       <p>Fusion of face and palmprint biometrics using Python, OpenCV, and scikit-learn to enhance authentication security and accuracy.</p>
     </div>
+
+  <!-- Video embeds -->
+  <div class="videos">
+    <iframe width="360" height="203" src="https://www.youtube.com/embed/4PMO-uhI_Y8?si=OIBxbzlB7bPUx3xw" frameborder="0" allowfullscreen></iframe>
+    <iframe width="360" height="203" src="https://www.youtube.com/embed/DK8WObCQMm0?si=_hZkVNJDxbwCYUUL" frameborder="0" allowfullscreen></iframe>
+    <iframe width="360" height="203" src="https://www.youtube.com/embed/oNH49adNyIQ?si=g4k8LxfkT51oHlPu" frameborder="0" allowfullscreen></iframe>
+    <iframe width="360" height="203" src="https://www.youtube.com/embed/EjovCPCAYfk?si=DXvCVvkKKm_faih2" frameborder="0" allowfullscreen></iframe>
+    <iframe width="360" height="203" src="https://www.youtube.com/embed/5JMLUxlKHO8?si=vO2ThBN1UCXsnqKD" frameborder="0" allowfullscreen></iframe>
+    <iframe width="360" height="203" src="https://www.youtube.com/embed/ep9lmrIWIwI?si=GyRNJM4vglcEYumD" frameborder="0" allowfullscreen></iframe>
+  </div>
+</div>
 
     <!-- Add more projects here as needed -->
   </div>
