--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="main-content">
     <h2>Portfolio</h2>
 
-    <h3>Projects</h3>
+    <h3>Coding Projects</h3>
     <div class="project">
       <h4>ASL-to-Speech Interpreter App</h4>
       <p>Developed using Python and MediaPipe. Converts American Sign Language gestures to audible speech, improving accessibility for the deaf and hard of hearing community.</p>
@@ -30,6 +30,8 @@
     </div>
 
   <!-- Video embeds -->
+  <h3>Spinning Text Projects</h3>
+  <p>Created with Cinema 4D with Python scripts for Raw 3D animations. Imported into Adobe After Effects before utilizing Typescript and plugins to compose the final result.</p>
   <div class="videos">
     <iframe width="360" height="203" src="https://www.youtube.com/embed/4PMO-uhI_Y8?si=OIBxbzlB7bPUx3xw" frameborder="0" allowfullscreen></iframe>
     <iframe width="360" height="203" src="https://www.youtube.com/embed/DK8WObCQMm0?si=_hZkVNJDxbwCYUUL" frameborder="0" allowfullscreen></iframe>
