--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="sidebar">
-    <h1>Allen Chen</h1>
-    <img src="IMG_3139.jpg" alt="Profile Photo" class="profile-photo">
-    <p>Recent IT graduate with a strong background in data analysis, scripting, and customer service. Passionate about transforming data into actionable insights to drive improvement and innovation.</p>
-    <p>Email: <a href="mailto:chenallen2001@gmail.com">chenallen2001@gmail.com</a></p>
-    <p><a href="https://www.linkedin.com/" target="_blank">View my LinkedIn Profile</a></p>
-    <p><a href="https://github.com/allixar" target="_blank">View my GitHub Profile</a></p>
-  </div>
+<div class="sidebar">
+  <h1>Allen Chen</h1>
+  <img src="IMG_3139.jpg" alt="Profile Photo" class="profile-photo" />
+  <p>Recent IT graduate with a background in data analysis, scripting, and customer service. Passionate about transforming data into actionable insights to drive improvement and innovation.</p>
+  <p>Email: <a href="mailto:chenallen2001@gmail.com">chenallen2001@gmail.com</a></p>
+  <p><a href="https://www.linkedin.com/in/allenmotions/" target="_blank">View my LinkedIn Profile</a></p>
+  <p><a href="https://github.com/allixar" target="_blank">View my GitHub Profile</a></p>
+
+  <h3>Resume 📄</h3>
+  <p><a href="Allen_Chen_Resume.pdf" target="_blank">Download My Resume (PDF)</a></p>
+</div>
 
   <div class="main-content">
     <h2>Portfolio</h2>
