--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <p><a href="https://www.linkedin.com/in/allenmotions/" target="_blank">View my LinkedIn Profile</a></p>
   <p><a href="https://github.com/allixar" target="_blank">View my GitHub Profile</a></p>
 
-  <h3>Resume 📄</h3>
+  <h3>Resume</h3>
   <p><a href="Allen_Chen_Resume.pdf" target="_blank">Download My Resume (PDF)</a></p>
 </div>
 
