--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <div class="sidebar">
   <h1>Allen Chen</h1>
   <img src="IMG_3139.jpg" alt="Profile Photo" class="profile-photo" />
-  <p>Recent IT graduate with a background in data analysis, scripting, and customer service. Passionate about transforming data into actionable insights to drive improvement and innovation.</p>
+  <p class="intro">
+  Recent IT graduate with a background in data analysis, scripting, and customer service. Passionate about transforming data into actionable insights to drive improvement and innovation.</p>
   <p>Email: <a href="mailto:chenallen2001@gmail.com">chenallen2001@gmail.com</a></p>
   <p><a href="https://www.linkedin.com/in/allenmotions/" target="_blank">View my LinkedIn Profile</a></p>
   <p><a href="https://github.com/allixar" target="_blank">View my GitHub Profile</a></p>
