--- a/index.html
+++ b/index.html
@@ -2,51 +2,64 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Allen Chen | Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="sidebar">
-  <h1>Allen Chen</h1>
-  <img src="IMG_3139.jpg" alt="Profile Photo" class="profile-photo" />
-  <p class="intro">
-  Recent IT graduate with a background in data analysis, scripting, and customer service. Passionate about transforming data into actionable insights to drive improvement and innovation.</p>
-  <p>Email: <a href="mailto:chenallen2001@gmail.com">chenallen2001@gmail.com</a></p>
-  <p><a href="https://www.linkedin.com/in/allenmotions/" target="_blank">View my LinkedIn Profile</a></p>
-  <p><a href="https://github.com/allixar" target="_blank">View my GitHub Profile</a></p>
 
-  <h3>Resume</h3>
-  <p><a href="Allen_Chen_Resume.pdf" target="_blank">Download My Resume (PDF)</a></p>
+<div id="main-container">
+  <aside class="sidebar">
+    <header>
+      <img src="IMG_3139.jpg" alt="A photo of Allen Chen" class="profile-photo">
+      <h1>Allen Chen</h1>
+    </header>
+    <section class="intro">
+      <p>Recent IT graduate with a background in data analysis, scripting, and customer service. Passionate about transforming data into actionable insights to drive improvement and innovation.</p>
+    </section>
+    <section class="contact">
+      <p>Email: <a href="mailto:chenallen2001@gmail.com">chenallen2001@gmail.com</a></p>
+      <p><a href="https://www.linkedin.com/in/allenmotions/" target="_blank" rel="noopener noreferrer">View my LinkedIn Profile</a></p>
+      <p><a href="https://github.com/allixar" target="_blank" rel="noopener noreferrer">View my GitHub Profile</a></p>
+    </section>
+    <section class="resume">
+      <h3>Resume</h3>
+      <p><a href="Allen_Chen_Resume.pdf" target="_blank" rel="noopener noreferrer">Download My Resume (PDF)</a></p>
+    </section>
+  </aside>
+
+  <main class="main-content">
+    <section id="portfolio">
+      <h2>Portfolio</h2>
+
+      <article class="project-category">
+        <h3>Coding Projects</h3>
+        <div class="project">
+          <h4>ASL-to-Speech Interpreter App</h4>
+          <p>Developed using Python and MediaPipe. Converts American Sign Language gestures to audible speech, improving accessibility for the deaf and hard of hearing community.</p>
+        </div>
+        <div class="project">
+          <h4>Multimodal Biometric Authentication Project</h4>
+          <p>Fusion of face and palmprint biometrics using Python, OpenCV, and scikit-learn to enhance authentication security and accuracy.</p>
+        </div>
+      </article>
+
+      <article class="project-category">
+        <h3>Spinning Text Projects</h3>
+        <p>Created with Cinema 4D with Python scripts for Raw 3D animations. Imported into Adobe After Effects before utilizing Typescript and plugins to compose the final result.</p>
+        <div class="videos">
+            <iframe title="[2D+AE] Enchanted, Taylor Swift (Lyric Video)" width="360" height="203" src="https://www.youtube.com/embed/4PMO-uhI_Y8?si=OIBxbzlB7bPUx3xw" frameborder="0" allowfullscreen></iframe>
+            <iframe title="[2D+AE] Taylor Swift Wildest Dreams (Lyric Video)" width="360" height="203" src="https://www.youtube.com/embed/DK8WObCQMm0?si=_hZkVNJDxbwCYUUL" frameborder="0" allowfullscreen></iframe>
+            <iframe title="[AE] Hyolyn - See Sea (Lyric Video)" width="360" height="203" src="https://www.youtube.com/embed/oNH49adNyIQ?si=g4k8LxfkT51oHlPu" frameborder="0" allowfullscreen></iframe>
+            <iframe title="[2D+AE] Taylor Swift - …Ready For It? (Lyric Video)" width="360" height="203" src="https://www.youtube.com/embed/EjovCPCAYfk?si=DXvCVvkKKm_faih2" frameborder="0" allowfullscreen></iframe>
+            <iframe title="[2D+AE] Ariana Grande, The Weeknd - Love Me Harder (Lyric Video)" width="360" height="203" src="https://www.youtube.com/embed/5JMLUxlKHO8?si=vO2ThBN1UCXsnqKD" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Alessandra - (Please Read) (Lyric Video)" width="360" height="203" src="https://www.youtube.com/embed/ep9lmrIWIwI?si=GyRNJM4vglcEYumD" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </article>
+    </section>
+  </main>
 </div>
 
-  <div class="main-content">
-    <h2>Portfolio</h2>
-
-    <h3>Coding Projects</h3>
-    <div class="project">
-      <h4>ASL-to-Speech Interpreter App</h4>
-      <p>Developed using Python and MediaPipe. Converts American Sign Language gestures to audible speech, improving accessibility for the deaf and hard of hearing community.</p>
-    </div>
-
-    <div class="project">
-      <h4>Multimodal Biometric Authentication Project</h4>
-      <p>Fusion of face and palmprint biometrics using Python, OpenCV, and scikit-learn to enhance authentication security and accuracy.</p>
-    </div>
-
-  <!-- Video embeds -->
-  <h3>Spinning Text Projects</h3>
-  <p>Created with Cinema 4D with Python scripts for Raw 3D animations. Imported into Adobe After Effects before utilizing Typescript and plugins to compose the final result.</p>
-  <div class="videos">
-    <iframe width="360" height="203" src="https://www.youtube.com/embed/4PMO-uhI_Y8?si=OIBxbzlB7bPUx3xw" frameborder="0" allowfullscreen></iframe>
-    <iframe width="360" height="203" src="https://www.youtube.com/embed/DK8WObCQMm0?si=_hZkVNJDxbwCYUUL" frameborder="0" allowfullscreen></iframe>
-    <iframe width="360" height="203" src="https://www.youtube.com/embed/oNH49adNyIQ?si=g4k8LxfkT51oHlPu" frameborder="0" allowfullscreen></iframe>
-    <iframe width="360" height="203" src="https://www.youtube.com/embed/EjovCPCAYfk?si=DXvCVvkKKm_faih2" frameborder="0" allowfullscreen></iframe>
-    <iframe width="360" height="203" src="https://www.youtube.com/embed/5JMLUxlKHO8?si=vO2ThBN1UCXsnqKD" frameborder="0" allowfullscreen></iframe>
-    <iframe width="360" height="203" src="https://www.youtube.com/embed/ep9lmrIWIwI?si=GyRNJM4vglcEYumD" frameborder="0" allowfullscreen></iframe>
-  </div>
-</div>
-
-    <!-- Add more projects here as needed -->
-  </div>
+<script src="script.js"></script>
 </body>
 </html>
