--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 
               <div id="report" class="tab-content" style="display: block;">
                 <p>The full project report, detailing the methodology, results, and ethical considerations.</p>
-                <iframe src="https://docs.google.com/document/d/e/2PACX-1vTldYg3RuEOX_xMLiR05tMucqsDtnzAq7AekHAy6tDYTYae5RFxlSWUXo41-fp1Hw/pub?embedded=true" style="width:100%; height:600px;" frameborder="0"></iframe>
+                <iframe src="https://usfedu-my.sharepoint.com/personal/achen30_usf_edu/_layouts/15/Doc.aspx?sourcedoc={d53bde71-9923-4a73-996b-a9148ccfa314}&amp;action=embedview" style="width:100%; height:600px;" frameborder="0"></iframe>
               </div>
 
               <div id="presentation" class="tab-content">
                 <p>A summary of the project findings, as presented to peers and faculty.</p>
-                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQ5rTH-g6R-9pFWI12N2uiygurAvQyjDkPLAY8jEA-9Ia-PXvGNWde8sbQbiR1eEQ/pub?start=false&loop=false&delayms=3000" frameborder="0" width="100%" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                <iframe src="https://usfedu-my.sharepoint.com/personal/achen30_usf_edu/_layouts/15/Doc.aspx?sourcedoc={e663017a-86be-41e4-9bd8-14471b4df4dd}&amp;action=embedview&amp;wdAr=1.7777777777777777&amp;wdEaaCheck=1" style="width:100%; height:569px;" frameborder="0"></iframe>
               </div>
             </div>
 
@@ -81,12 +81,13 @@
         <h3>Spinning Text Projects</h3>
         <p>Created with Cinema 4D with Python scripts for Raw 3D animations. Imported into Adobe After Effects before utilizing Typescript and plugins to compose the final result.</p>
         <div class="videos">
-            <iframe title="[2D+AE] Enchanted, Taylor Swift (Lyric Video)" width="360" height="203" src="https://www.youtube.com/embed/4PMO-uhI_Y8?si=OIBxbzlB7bPUx3xw" frameborder="0" allowfullscreen></iframe>
-            <iframe title="[2D+AE] Taylor Swift Wildest Dreams (Lyric Video)" width="360" height="203" src="https://www.youtube.com/embed/DK8WObCQMm0?si=_hZkVNJDxbwCYUUL" frameborder="0" allowfullscreen></iframe>
-            <iframe title="[AE] Hyolyn - See Sea (Lyric Video)" width="360" height="203" src="https://www.youtube.com/embed/oNH49adNyIQ?si=g4k8LxfkT51oHlPu" frameborder="0" allowfullscreen></iframe>
-            <iframe title="[2D+AE] Taylor Swift - …Ready For It? (Lyric Video)" width="360" height="203" src="https://www.youtube.com/embed/EjovCPCAYfk?si=DXvCVvkKKm_faih2" frameborder="0" allowfullscreen></iframe>
-            <iframe title="[2D+AE] Ariana Grande, The Weeknd - Love Me Harder (Lyric Video)" width="360" height="203" src="https://www.youtube.com/embed/5JMLUxlKHO8?si=vO2ThBN1UCXsnqKD" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Alessandra - (Please Read) (Lyric Video)" width="360" height="203" src="https://www.youtube.com/embed/ep9lmrIWIwI?si=GyRNJM4vglcEYumD" frameborder="0" allowfullscreen></iframe>
+            <iframe title="" width="360" height="203" src="https://www.youtube.com/embed/4PMO-uhI_Y8?si=OIBxbzlB7bPUx3xw" frameborder="0" allowfullscreen></iframe>
+            <iframe title="" width="360" height="203" src="https://www.youtube.com/embed/DK8WObCQMm0?si=_hZkVNJDxbwCYUUL" frameborder="0" allowfullscreen></iframe>
+            <iframe title="" width="360" height="203" src="https://www.youtube.com/embed/oNH49adNyIQ?si=g4k8LxfkT51oHlPu" frameborder="0" allowfullscreen></iframe>
+            <iframe title="" width="360" height="203" src="https://www.youtube.com/embed/EjovCPCAYfk?si=DXvCVvkKKm_faih2" frameborder="0" allowfullscreen></iframe>
+            <iframe title="" width="360" height="203" src="https://www.youtube.com/embed/5JMLUxlKHO8?si=vO2ThBN1UCXsnqKD" frameborder="0" allowfullscreen></iframe>
+            <iframe title="" width="360" height="203" src="https://www.youtube.com/embed/ep9lmrIWIwI?si=GyRNJM4vglcEYumD" frameborder="0" allowfullscreen></iframe>
+          <iframe title="" width="360" height="203" src="https://www.youtube.com/watch?v=oUEBJaoJ3cY" frameborder="0" allowfullscreen></iframe>
         </div>
       </article>
     </section>
