--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Allen Chen</h1>
     </header>
     <section class="intro">
-      <p>Recent IT graduate with a background in data analysis, scripting, and customer service. Passionate about transforming data into actionable insights to drive improvement and innovation.</p>
+      <p>With a deep interest in data analysis, I thrive on transforming raw information into actionable solutions. My academic and project work has allowed me to build a strong foundation in Python-based data analysis, from preprocessing and normalizing varied datasets to deploying and evaluating machine learning models. I am especially proud of my work on a multimodal biometric system where I used score-level fusion to combine facial and palmprint data, proving that this method creates a more secure and resilient authentication system. I am eager to bring my analytical mindset and technical skills to a challenging role where I can continue to find innovative, data-driven answers to complex questions.</p>
     </section>
     <section class="contact">
       <p>Email: <a href="mailto:chenallen2001@gmail.com">chenallen2001@gmail.com</a></p>
