--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
     <header>
       <img src="IMG_3139.jpg" alt="A photo of Allen Chen" class="profile-photo">
       <h1>Allen Chen</h1>
+      
     </header>
     <section class="intro">
-      <p>With a deep interest in data analysis, I thrive on transforming raw information into actionable solutions. My academic and project work has allowed me to build a strong foundation in Python-based data analysis, from preprocessing and normalizing varied datasets to deploying and evaluating machine learning models. I am especially proud of my work on a multimodal biometric system where I used score-level fusion to combine facial and palmprint data, proving that this method creates a more secure and resilient authentication system. I am eager to bring my analytical mindset and technical skills to a challenging role where I can continue to find innovative, data-driven answers to complex questions.</p>
+      <p>A passionate Data Analyst who transforms complex data into clear, actionable insights to drive informed decision-making.</p>
+      <ul>
+        <li>Specializes in the full data analytics lifecycle — from data cleaning and preprocessing to advanced model development and evaluation using Python and machine learning techniques.</li>
+        <li>Combines a strong analytical foundation with a creative and innovative approach to solving challenging, data-driven problems.</li>
+        <li>Dedicated to leveraging technology and design to create impactful, user-centered solutions that bridge data analysis and visual storytelling.</li>
+      </ul>
     </section>
+    
     <section class="contact">
       <p>Email: <a href="mailto:chenallen2001@gmail.com">chenallen2001@gmail.com</a></p>
       <p><a href="https://www.linkedin.com/in/allenmotions/" target="_blank" rel="noopener noreferrer">View my LinkedIn Profile</a></p>
