--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
             <iframe title="Savannah" width="360" height="203" src="https://www.youtube.com/embed/EjovCPCAYfk?si=DXvCVvkKKm_faih2" frameborder="0" allowfullscreen></iframe>
             <iframe title="Mihaka" width="360" height="203" src="https://www.youtube.com/embed/5JMLUxlKHO8?si=vO2ThBN1UCXsnqKD" frameborder="0" allowfullscreen></iframe>
             <iframe title="Alessandra" width="360" height="203" src="https://www.youtube.com/embed/ep9lmrIWIwI?si=GyRNJM4vglcEYumD" frameborder="0" allowfullscreen></iframe>
-          <iframe title="Carolyn" width="360" height="203" src="https://www.youtube.com/watch?v=oUEBJaoJ3cY" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Carolyn" width="360" height="203" src="https://www.youtube.com/embed/oUEBJaoJ3cY?si=ZIPqy2IFjrqxhX5V" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Riley" width="360" height="203" src="https://www.youtube.com/embed/QCt9tYipEuU?si=08aLohhzFhyPjLjC" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Adelina" width="360" height="203" src="https://www.youtube.com/embed/qWDoWBZ_FAI?si=YO8W1VhMnfcCprhH" frameborder="0" allowfullscreen></iframe>
         </div>
       </article>
     </section>
