--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
             <h5>Key Results</h5>
             <p>The k-Nearest Neighbors (KNN) classifier performed best for both individual modalities, with an Equal Error Rate (EER) of 0.192 for faces and 0.196 for palmprints. While the face modality showed better separation between genuine and impostor scores, the fusion of both created a more balanced and robust system, validating the hypothesis that multimodal systems are more resilient, especially against occlusions.</p>
             
-            <div class="project-documents">
-              <h5>Project Documents</h5>
-              <div class="tabs">
-                <button class="tab-button active" onclick="openTab(event, 'report')">Project Report</button>
-                <button class="tab-button" onclick="openTab(event, 'presentation')">Presentation</button>
+              <div class="project-documents">
+                <h5>Project Documents</h5>
+                <div class="tabs">
+                  <a class="tab-button" href="Project_Report.pdf" target="_blank">Project Report</a>
+                  <a class="tab-button" href="Project_Presentation.pdf" target="_blank">Presentation</a>
+                </div>
               </div>
 
               <div id="report" class="tab-content" style="display: block;">
