--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
       
     </header>
     <section class="intro">
-      <p>A passionate Data Analyst who transforms complex data into clear, actionable insights to drive informed decision-making.</p>
-      <ul>
-        <li>Specializes in the full data analytics lifecycle — from data cleaning and preprocessing to advanced model development and evaluation using Python and machine learning techniques.</li>
-        <li>Combines a strong analytical foundation with a creative and innovative approach to solving challenging, data-driven problems.</li>
-        <li>Dedicated to leveraging technology and design to create impactful, user-centered solutions that bridge data analysis and visual storytelling.</li>
-      </ul>
+      <p>A creative and innovative Data Analyst who transforms complex data into clear, actionable insights to drive informed decision-making.</p>
     </section>
     
     <section class="contact">
