--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
     <header>
       <img src="IMG_3139.jpg" alt="A photo of Allen Chen" class="profile-photo">
       <h1>Allen Chen</h1>
-      
     </header>
     <section class="intro">
       <p>A passionate Data Analyst who transforms complex data into clear, actionable insights to drive informed decision-making.</p>
     </section>
-    
     <section class="contact">
       <p>Email: <a href="mailto:chenallen2001@gmail.com">chenallen2001@gmail.com</a></p>
       <p><a href="https://www.linkedin.com/in/allenmotions/" target="_blank" rel="noopener noreferrer">View my LinkedIn Profile</a></p>
@@ -71,7 +69,7 @@
 
               <div id="presentation" class="tab-content">
                 <p>A summary of the project findings, as presented to peers and faculty.</p>
-                <iframe src="https://usfedu-my.sharepoint.com/personal/achen30_usf_edu/_layouts/15/Doc.aspx?sourcedoc={e663017a-86be-41e4-9bd8-14471b4df4dd}&amp;action=embedview&amp;wdAr=1.7777777777777777&amp;wdEaaCheck=1" style="width:100%; height:569px;" frameborder="0"></iframe>
+                <iframe src="https://usfedu-my.sharepoint.com/personal/achen30_usf_edu/_layouts/15/Doc.aspx?sourcedoc={e663017a-86be-41e4-9bd8-14471b4df4dd}&amp;action=embedview&amp;wdAr=1.7777777777777777" style="width:100%; height:569px;" frameborder="0"></iframe>
               </div>
             </div>
 
@@ -83,15 +81,15 @@
         <h3>Spinning Text Projects</h3>
         <p>Created with Cinema 4D with Python scripts for Raw 3D animations. Imported into Adobe After Effects before utilizing Typescript and plugins to compose the final result.</p>
         <div class="videos">
-            <iframe title="Jolien" width="360" height="203" src="https://www.youtube.com/embed/4PMO-uhI_Y8?si=OIBxbzlB7bPUx3xw" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Olivia" width="360" height="203" src="https://www.youtube.com/embed/DK8WObCQMm0?si=_hZkVNJDxbwCYUUL" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Nicole" width="360" height="203" src="https://www.youtube.com/embed/oNH49adNyIQ?si=g4k8LxfkT51oHlPu" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Savannah" width="360" height="203" src="https://www.youtube.com/embed/EjovCPCAYfk?si=DXvCVvkKKm_faih2" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Mihaka" width="360" height="203" src="https://www.youtube.com/embed/5JMLUxlKHO8?si=vO2ThBN1UCXsnqKD" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Alessandra" width="360" height="203" src="https://www.youtube.com/embed/ep9lmrIWIwI?si=GyRNJM4vglcEYumD" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Carolyn" width="360" height="203" src="https://www.youtube.com/embed/oUEBJaoJ3cY?si=ZIPqy2IFjrqxhX5V" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Riley" width="360" height="203" src="https://www.youtube.com/embed/QCt9tYipEuU?si=08aLohhzFhyPjLjC" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Adelina" width="360" height="203" src="https://www.youtube.com/embed/qWDoWBZ_FAI?si=YO8W1VhMnfcCprhH" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Jolien" width="360" height="203" src="https://www.youtube.com/embed/4PMO-uhI_Y8?si=OIBxbzlB7bPUx3xw" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Olivia" width="360" height="203" src="https://www.youtube.com/embed/DK8WObCQMm0?si=_hZkVNJDxbwCYUUL" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Nicole" width="360" height="203" src="https://www.youtube.com/embed/oNH49adNyIQ?si=g4k8LxfkT51oHlPu" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Savannah" width="360" height="203" src="https://www.youtube.com/embed/EjovCPCAYfk?si=DXvCVvkKKm_faih2" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Mihaka" width="360" height="203" src="https://www.youtube.com/embed/5JMLUxlKHO8?si=vO2ThBN1UCXsnqKD" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Alessandra" width="360" height="203" src="https://www.youtube.com/embed/ep9lmrIWIwI?si=GyRNJM4vglcEYumD" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Carolyn" width="360" height="203" src="https://www.youtube.com/embed/oUEBJaoJ3cY?si=ZIPqy2IFjrqxhX5V" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Riley" width="360" height="203" src="https://www.youtube.com/embed/QCt9tYipEuU?si=08aLohhzFhyPjLjC" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Adelina" width="360" height="203" src="https://www.youtube.com/embed/qWDoWBZ_FAI?si=YO8W1VhMnfcCprhH" frameborder="0" allowfullscreen></iframe>
         </div>
       </article>
     </section>
