--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <div class="project">
           <h4>ASL-to-Speech Interpreter App</h4>
           <p>Developed using Python and MediaPipe. Converts American Sign Language gestures to audible speech, improving accessibility for the deaf and hard of hearing community.</p>
+          <div class="videos">
+            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7338562121372246018?compact=1" frameborder="0" allowfullscreen="" title="Embedded post of ASL to Speech Interpreter App"></iframe>
+          </div>
         </div>
         <div class="project">
           <h4>Multimodal Biometric Authentication Project</h4>
