--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <h4>ASL-to-Speech Interpreter App</h4>
           <p>Developed using Python and MediaPipe. Converts American Sign Language gestures to audible speech, improving accessibility for the deaf and hard of hearing community.</p>
           <div class="videos">
-            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7338562121372246018?compact=1" height="399" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7338562121372246018?compact=1" style="border: 1px solid #ddd; width: 100%; max-width: 504px; height: 399px; margin-top: 20px; border-radius: 8px;" allowfullscreen="" title="Embedded post of ASL to Speech Interpreter App"></iframe>
           </div>
         </div>
         <div class="project">
