--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
         <div class="project">
           <h4>ASL-to-Speech Interpreter App</h4>
           <p>Developed using Python and MediaPipe. Converts American Sign Language gestures to audible speech, improving accessibility for the deaf and hard of hearing community.</p>
-          <div class="videos">
-            <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7338562121372246018?compact=1" style="border: 1px solid #ddd; width: 100%; max-width: 504px; height: 399px; margin-top: 20px; border-radius: 8px;" allowfullscreen="" title="Embedded post of ASL to Speech Interpreter App"></iframe>
-          </div>
+          <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7338562121372246018" style="border: 1px solid #ddd; width: 100%; max-width: 504px; height: 962px; margin-top: 20px; border-radius: 8px;" allowfullscreen="" title="Embedded post of ASL to Speech Interpreter App"></iframe>
         </div>
         <div class="project">
           <h4>Multimodal Biometric Authentication Project</h4>
@@ -67,12 +65,12 @@
 
               <div id="report" class="tab-content" style="display: block;">
                 <p>The full project report, detailing the methodology, results, and ethical considerations.</p>
-                <iframe src="https://usfedu-my.sharepoint.com/personal/achen30_usf_edu/_layouts/15/Doc.aspx?sourcedoc={d53bde71-9923-4a73-996b-a9148ccfa314}&amp;action=embedview" style="width:100%; height:600px;" frameborder="0"></iframe>
+                <iframe src="https://usfedu-my.sharepoint.com/personal/achen30_usf_edu/_layouts/15/Doc.aspx?sourcedoc={d53bde71-9923-4a73-996b-a9148ccfa314}&action=embedview" style="width:100%; height:600px;" frameborder="0"></iframe>
               </div>
 
               <div id="presentation" class="tab-content">
                 <p>A summary of the project findings, as presented to peers and faculty.</p>
-                <iframe src="https://usfedu-my.sharepoint.com/personal/achen30_usf_edu/_layouts/15/Doc.aspx?sourcedoc={e663017a-86be-41e4-9bd8-14471b4df4dd}&amp;action=embedview&amp;wdAr=1.7777777777777777" style="width:100%; height:569px;" frameborder="0"></iframe>
+                <iframe src="https://usfedu-my.sharepoint.com/personal/achen30_usf_edu/_layouts/15/Doc.aspx?sourcedoc={e663017a-86be-41e4-9bd8-14471b4df4dd}&action=embedview&wdAr=1.7777777777777777" style="width:100%; height:569px;" frameborder="0"></iframe>
               </div>
             </div>
 
@@ -84,15 +82,15 @@
         <h3>Spinning Text Projects</h3>
         <p>Created with Cinema 4D with Python scripts for Raw 3D animations. Imported into Adobe After Effects before utilizing Typescript and plugins to compose the final result.</p>
         <div class="videos">
-            <iframe title="Spinning Text Animation: Jolien" width="360" height="203" src="https://www.youtube.com/embed/4PMO-uhI_Y8?si=OIBxbzlB7bPUx3xw" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Olivia" width="360" height="203" src="https://www.youtube.com/embed/DK8WObCQMm0?si=_hZkVNJDxbwCYUUL" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Nicole" width="360" height="203" src="https://www.youtube.com/embed/oNH49adNyIQ?si=g4k8LxfkT51oHlPu" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Savannah" width="360" height="203" src="https://www.youtube.com/embed/EjovCPCAYfk?si=DXvCVvkKKm_faih2" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Mihaka" width="360" height="203" src="https://www.youtube.com/embed/5JMLUxlKHO8?si=vO2ThBN1UCXsnqKD" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Alessandra" width="360" height="203" src="https://www.youtube.com/embed/ep9lmrIWIwI?si=GyRNJM4vglcEYumD" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Carolyn" width="360" height="203" src="https://www.youtube.com/embed/oUEBJaoJ3cY?si=ZIPqy2IFjrqxhX5V" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Riley" width="360" height="203" src="https://www.youtube.com/embed/QCt9tYipEuU?si=08aLohhzFhyPjLjC" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Adelina" width="360" height="203" src="https://www.youtube.com/embed/qWDoWBZ_FAI?si=YO8W1VhMnfcCprhH" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Jolien" src="https://www.youtube.com/embed/4PMO-uhI_Y8?si=OIBxbzlB7bPUx3xw" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Olivia" src="https://www.youtube.com/embed/DK8WObCQMm0?si=_hZkVNJDxbwCYUUL" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Nicole" src="https://www.youtube.com/embed/oNH49adNyIQ?si=g4k8LxfkT51oHlPu" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Savannah" src="https://www.youtube.com/embed/EjovCPCAYfk?si=DXvCVvkKKm_faih2" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Mihaka" src="https://www.youtube.com/embed/5JMLUxlKHO8?si=vO2ThBN1UCXsnqKD" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Alessandra" src="https://www.youtube.com/embed/ep9lmrIWIwI?si=GyRNJM4vglcEYumD" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Carolyn" src="https://www.youtube.com/embed/oUEBJaoJ3cY?si=ZIPqy2IFjrqxhX5V" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Riley" src="https://www.youtube.com/embed/QCt9tYipEuU?si=08aLohhzFhyPjLjC" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Adelina" src="https://www.youtube.com/embed/qWDoWBZ_FAI?si=YO8W1VhMnfcCprhH" frameborder="0" allowfullscreen></iframe>
         </div>
       </article>
     </section>
