--- a/index.html
+++ b/index.html
@@ -34,11 +34,19 @@
 
       <article class="project-category">
         <h3>Coding Projects</h3>
+
+        <div class="project">
+          <h4>Chinese Food Website</h4>
+          <p>A web application showcasing various Chinese dishes, built to be user-friendly and visually appealing.</p>
+          <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7346617507690020865?collapsed=1" style="border: 1px solid #ddd; width: 100%; max-width: 504px; height: 542px; margin-top: 20px; border-radius: 8px;" allowfullscreen="" title="Embedded post for Chinese Food Website"></iframe>
+        </div>
+        
         <div class="project">
           <h4>ASL-to-Speech Interpreter App</h4>
           <p>Developed using Python and MediaPipe. Converts American Sign Language gestures to audible speech, improving accessibility for the deaf and hard of hearing community.</p>
-          <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7338562121372246018" style="border: 1px solid #ddd; width: 100%; max-width: 504px; height: 962px; margin-top: 20px; border-radius: 8px;" allowfullscreen="" title="Embedded post of ASL to Speech Interpreter App"></iframe>
+          <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:ugcPost:7338562121372246018?collapsed=1" style="border: 1px solid #ddd; width: 100%; max-width: 504px; height: 542px; margin-top: 20px; border-radius: 8px;" allowfullscreen="" title="Embedded post of ASL to Speech Interpreter App"></iframe>
         </div>
+        
         <div class="project">
           <h4>Multimodal Biometric Authentication Project</h4>
           <p>Fusion of face and palmprint biometrics using Python, OpenCV, and scikit-learn to enhance authentication security and accuracy, especially when face coverings are present. This system demonstrates improved robustness over single-modality methods by combining the unique features of both traits.</p>
@@ -82,15 +90,15 @@
         <h3>Spinning Text Projects</h3>
         <p>Created with Cinema 4D with Python scripts for Raw 3D animations. Imported into Adobe After Effects before utilizing Typescript and plugins to compose the final result.</p>
         <div class="videos">
-            <iframe title="Spinning Text Animation: Jolien" src="https://www.youtube.com/embed/4PMO-uhI_Y8?si=OIBxbzlB7bPUx3xw" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Olivia" src="https://www.youtube.com/embed/DK8WObCQMm0?si=_hZkVNJDxbwCYUUL" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Nicole" src="https://www.youtube.com/embed/oNH49adNyIQ?si=g4k8LxfkT51oHlPu" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Savannah" src="https://www.youtube.com/embed/EjovCPCAYfk?si=DXvCVvkKKm_faih2" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Mihaka" src="https://www.youtube.com/embed/5JMLUxlKHO8?si=vO2ThBN1UCXsnqKD" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Alessandra" src="https://www.youtube.com/embed/ep9lmrIWIwI?si=GyRNJM4vglcEYumD" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Carolyn" src="https://www.youtube.com/embed/oUEBJaoJ3cY?si=ZIPqy2IFjrqxhX5V" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Riley" src="https://www.youtube.com/embed/QCt9tYipEuU?si=08aLohhzFhyPjLjC" frameborder="0" allowfullscreen></iframe>
-            <iframe title="Spinning Text Animation: Adelina" src="https://www.youtube.com/embed/qWDoWBZ_FAI?si=YO8W1VhMnfcCprhH" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Jolien" src="https://www.youtube.com/embed/video-id-1" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Olivia" src="https://www.youtube.com/embed/video-id-2" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Nicole" src="https://www.youtube.com/embed/video-id-3" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Savannah" src="https://www.youtube.com/embed/video-id-4" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Mihaka" src="https://www.youtube.com/embed/video-id-5" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Alessandra" src="https://www.youtube.com/embed/video-id-6" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Carolyn" src="https://www.youtube.com/embed/video-id-7" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Riley" src="https://www.youtube.com/embed/video-id-8" frameborder="0" allowfullscreen></iframe>
+            <iframe title="Spinning Text Animation: Adelina" src="https://www.youtube.com/embed/video-id-9" frameborder="0" allowfullscreen></iframe>
         </div>
       </article>
     </section>
